Все фрагменты теперь получают данные из сети + добавил фото монстра в фрагмент для просмотра инфы о монстре

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,6 @@
         <string name="reaction_template">%1$s: %2$s</string>
     <string name="not_available">This is not available!\n</string>
     <string name="spell_item_text">• %1$s</string>
+    <string name="monster_image_description">Image of the creature</string>
 
 </resources>
